[project]
name = "asap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "backcall==0.2.0",
    "cloudpickle==2.0.0",
    "cycler==0.11.0",
    "decorator==5.1.0",
    "fonttools==4.28.4",
    "gym>=0.26.2",
    "ikpy==3.3.4",
    "importlib-metadata==4.8.2",
    "ipython==7.30.1",
    "jedi==0.18.1",
    "kiwisolver==1.3.2",
    "matplotlib-inline==0.1.3",
    "matplotlib==3.5.1",
    "networkx>=3.1",
    "numpy>=1.22.4",
    "packaging>=24.1",
    "parso==0.8.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "pillow>=10.4.0",
    "prompt-toolkit==3.0.24",
    "ptyprocess==0.7.0",
    "pyglet==1.5.23",
    "pygments==2.10.0",
    "pyparsing==3.0.6",
    "pyquaternion==0.9.9",
    "python-dateutil==2.8.2",
    "python-fcl==0.6.1",
    "requests==2.27.1",
    "rtree==0.9.7",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "seaborn==0.12.2",
    "six==1.16.0",
    "sortedcontainers==2.4.0",
    "torch-geometric==2.2.0",
    "torch==1.13.1",
    "tqdm==4.62.3",
    "traitlets==5.1.1",
    "trimesh==3.10.8",
    "typing-extensions==4.0.1",
    "wcwidth==0.2.5",
    "zipp==3.6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]
